# sentiment-analysis-workshop

./: README.md  main.py  pyproject.toml
data/incontext_big.hf/: data-00000-of-00001.arrow  state.json
data/incontext_small.hf/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/test.hf/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/train_ds.hf/: dataset_info.json  state.json
data/valid_big.hf/: data-00000-of-00001.arrow  state.json
data/valid_mini.hf/: data-00000-of-00001.arrow  state.json
data/valid_small.hf/: data-00000-of-00001.arrow  state.json
docs/: report.md
experiments/: cot_experiment.py  experiment.py  few_shot_experiment.py  simple_prompt_experiment.py  utils.py
logs/CoT/: log.csv
logs/few_shot/: log.csv
logs/simple_prompt_big_llm/: log.csv
logs/simple_prompt_small_llm/: log.csv
notebooks/: data_analysis.ipynb  exp_cot.ipynb  exp_fewshot.ipynb  exp_simple_prompt.ipynb  prompt_experiments.ipynb
