[project]
name = "sentiment-analysis-workshop"
version = "0.1.0"
description = "simple sentiment analysis project using SLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.5.1",
    "ipywidgets>=8.1.6",
    "llama-cpp-python>=0.3.8",
    "nltk>=3.9.1",
    "notebook>=7.4.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "umap-learn>=0.5.7",
    "wordcloud>=1.9.4",
]
